--- a/ClothSimulator/ClothSimulator.vcxproj
+++ b/ClothSimulator/ClothSimulator.vcxproj
@@ -134,7 +134,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\Assignment1.cpp" />
+    <ClCompile Include="src\Main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\Constraint.hpp" />
+    <ClInclude Include="src\Input_handler.hpp" />
+    <ClInclude Include="src\Particle.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
